made some more edits

--- a/W3-JS-Exercises/index-functions.html
+++ b/W3-JS-Exercises/index-functions.html
@@ -16,7 +16,7 @@
 
     <script>
         function myFunction() {
-            return "Hello to all"; 
+            return "Hello to all, this function reveals this statement"; 
         }
         document.getElementById("demo").innerHTML = myFunction(); //will display Hello to all on pg
     </script>
