--- a/W3-JS-Exercises/index-loops.html
+++ b/W3-JS-Exercises/index-loops.html
@@ -66,15 +66,15 @@
         } 
 
         //BREAK LOOPS
-        //Stop the loop when a = 5
+        //Stop the loop when a = 5 - use break
         for (a = 0; a < 10; a++) {
             console.log('break', a); //0, 1, 2, 3, 4, 5
             if (a == 5){
-                break;
+                break; //stops loop at specified point
             }
         }    
 
-        //Make the loop jump to the next iteration when b = 5
+        //Make the loop jump to the next iteration when b = 5 - use continue
         for (b = 0; b < 10; b++){
             if (b == 5) {
                 continue; //makes it jump to next iteration
