added more JS styling

--- a/W3-JS-Exercises/index-events.html
+++ b/W3-JS-Exercises/index-events.html
@@ -17,6 +17,33 @@
             border: 10px solid rgb(55, 253, 253);
             border-radius: 5px;
         }
+
+        .second{
+            animation: spin 3s linear infinite;
+        }
+
+        /* spin animation for the second button */
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+
+        /*slidein animation for the first button - activated in JS*/
+        @keyframes slidein {
+            from {
+                margin-left: 100%;
+                width: 200%;
+            }
+
+            to {
+                margin-left: 0%;
+                width: 100%;
+            }
+        }
     </style>
 </head>
 <body>
@@ -24,10 +51,10 @@
 
     <!--ADD EVENT IN HTML, NOT W/ JS-->
     <!--Click button and alert shows-->
-    <button onclick = "alert('This event was created in html, not the script file')">Click Me</button>
+    <button onclick = "alert('This event was created in html, not the script file')">Please click me</button>
     <br>
     <!--Click button and triggers myFunction function-->
-    <button onclick="myFunction()">Click Here</button>
+    <button onclick="myFunction()" class="second">Click Here</button>
     <br>
     <!--Will the styling of the div when cursor does mouseover - use this-->
     <div onmouseover="this.style.backgroundColor='red'; this.style.color = 'yellow'; this.style.fontStyle = 'italic'; this.style.fontSize = '18px'">Place cursor here to see magic</div>
@@ -48,7 +75,12 @@
             btn.style.margin = "80px"; //adds 80px of margin
             btn.style.padding = '52px 33px'; //adds 52px & 33px of padding
             btn.style.textDecoration = 'underline'; //adds underline
-            btn.style.fontWeight = '800';
+            btn.style.fontWeight = '800'; //increase font weight
+            btn.innerText = 'Changes upon us!' //changes the text
+            btn.style.fontSize = '44px'; //changes the font
+            btn.style.animation = "slidein 2s linear"; //adds an animation - define keyframes in cSS
+            btn.style.boxShadow = '12px 12px 2px 1px rgba(0, 153, 255, .4)'; //adds box-shadow
+            btn.style.textTransform = 'uppercase'; //makes text uppercase
         });
 
         //Define the function to run when button is clicked
