--- a/W3-JS-Exercises/index-strings.html
+++ b/W3-JS-Exercises/index-strings.html
@@ -42,8 +42,7 @@
         //CONCATENATE STRINGS
         let str1 = "Mushroom";
         let str2 = "Omelette";
-        alert(str1 + str2); //shows MushroomOmelette
-        document.getElementById("food").innerHTML = (str1 + str2); //connects 2 strings together - prints MushroomOmelette on pg
+        document.getElementById("food").innerHTML = (str1 + str2 + " --- results from string concatenating"); //connects 2 strings together - prints MushroomOmelette on pg
     </script>
 </body>
 </html>
