--- a/W3-JS-Exercises/index-variables.html
+++ b/W3-JS-Exercises/index-variables.html
@@ -37,7 +37,7 @@
     }
     sumTwo();
     
-    //declare variables - can declare a list and separate by comma
+    //declare variables - can declare a list and separate by comma and only use let 1x
     let firstName = "Walter", lastName = "Ellering", age = 35;
 
     //orig way of declaring var w/ let statement for each line
