--- a/W3-JS-Exercises/index-arrays.html
+++ b/W3-JS-Exercises/index-arrays.html
@@ -8,6 +8,10 @@
         body{
             background-color: lightgreen;
             font-size: 20px;
+            margin-left: 20px;
+        }
+        h1{
+            color: darkred;
         }
     </style>
 </head>
