added some styling

--- a/W3-JS-Exercises/index-dom.html
+++ b/W3-JS-Exercises/index-dom.html
@@ -34,7 +34,7 @@
     <p class="test"></p>
     <p class="test"></p>
 
-    <img id="image" width="30%" src="DSC07353.JPG">
+    <img id="image" width="20%" height="250px" src="DSC07353.JPG">
 
     <br>
     <br>
