--- a/baseball/index-reg.html
+++ b/baseball/index-reg.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Lights, camera, no action: How MLB's poor marketing of its sport has contributed to the dwindling number of African American players and fans</h1>
-    <img src="Baseball.png" alt="baseball-diamond">
+    <img src="baseball.png" alt="baseball-diamond">
 
 </body>
 </html>
