was able to keep pic stationary while zooming
used p5.js and decreased font size of h1, moved button higher up the screen

--- a/baseball/index-reg.html
+++ b/baseball/index-reg.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baseball and race</title>
-    <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.sound.min.js"></script>
+    <link rel="stylesheet" href="style-reg.css">
 </head>
 <body>
     <h1>Lights, camera, no action: How MLB's poor marketing of its sport has contributed to the dwindling number of African American players and fans</h1>
-    <img src="baseball.png" alt="baseball-diamond">
-
+    <button>Click here to start</button>
+    <!-- <img src="baseball.png" alt="baseball-diamond"> -->
+    <script src="sketch-reg.js"></script>
 </body>
 </html>
