duplicated files because github pages not working

--- a/baseball/index-ball.html
+++ b/baseball/index-ball.html
@@ -7,13 +7,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-ball.css">
 </head>
 <body>
     <h1>Lights, camera, no action: How MLB's poor marketing of its sport has contributed to the dwindling number of African American players and fans</h1>
     <button>Click here to start</button>
     <br/>
     <!-- <img src="baseball.png" alt="baseball-diamond"> -->
-    <script src="sketch.js"></script>
+    <script src="sketch-ball.js"></script>
 </body>
 </html>
