--- a/baseball/test.html
+++ b/baseball/test.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
     <title>Document</title>
     <link rel="stylesheet" href="test.css">
 </head>
 <body>
     <h1>Baseball and race</h1>
+    <button>Click here to start</button>
+    <br/>
     <!-- <img src="baseball-field.jpg" alt=""> -->
+     <script src="test.js"></script>
 </body>
 </html>
