--- a/expressive-web/index-orig.html
+++ b/expressive-web/index-orig.html
@@ -6,7 +6,7 @@
     <title>Travel</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-orig.css">
 </head>
 <body>
     <a href="home.html" class="home-link">Home</a>
@@ -17,11 +17,6 @@
         <!--Audio element would not work just wouldn't show up on the DOM, even tried testing on a blank index.html-->
         <!-- <audio src="audio/169th street.mp3" type="audio/mp3" autoplay="false" muted="true" width="130px" height="100px"></audio> -->
     </div>
-
-    <div class="audio">
-        <audio src="audio/169th street.mp3"></audio>
-    </div>
-
     
     <!--Create the starting statement-->
     <h3 class="intro scrolling-text mt-4 flex">
@@ -353,5 +348,5 @@
 <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
 <script src="https://unpkg.com/scrollama"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="script.js"></script>
+<script src="script-orig.js"></script>
 </html>
