trying to update the embed files to audio

--- a/expressive-web/index.html
+++ b/expressive-web/index.html
@@ -12,11 +12,11 @@
     <a href="home.html" class="home-link">Home</a>
     <br />
     <button class="flex">Pause trip</button>
-    <div>
+    <!-- <div>
         <embed src="audio/169th street.mp3" type="audio/mp3" width="130px" height="100px" class="mt-5" />
         <!--Audio element would not work just wouldn't show up on the DOM, even tried testing on a blank index.html-->
-        <!-- <audio src="audio/169th street.mp3" type="audio/mp3" autoplay="false" muted="true" width="130px" height="100px"></audio> -->
-    </div>
+        <!-- <audio src="audio/169th street.mp3" type="audio/mp3" autoplay="false" muted="true" width="130px" height="100px"></audio>
+    </div> -->
 
     <div class="audio">
         <audio src="audio/169th street.mp3"></audio>
