made the ship responsive

--- a/p5-template/index-ship.html
+++ b/p5-template/index-ship.html
@@ -9,7 +9,7 @@
 <body>
 
     <main>
-        <h2>Before impact</h2>
+        <h2 style="color: blueviolet; font-weight: bold;">Before impact</h2>
         <!-- p5 will place a canvas in any 'main' element by default
     if you don't have a main element it will create one -->
     </main>
@@ -18,6 +18,6 @@
 
 <!-- loads p5.js library from the web, place before my main.js file-->
 <script src="https://cdn.jsdelivr.net/npm/p5@1.4.2/lib/p5.js"></script>
-<script src="./scripts/main-ship-orig.js"></script>
+<script src="./scripts/main-ship.js"></script>
 
 </html>
