--- a/p5-template/index-ship.html
+++ b/p5-template/index-ship.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>p5.js Noise example</title>
+    <title>Before Impact</title>
     <link rel="stylesheet" type="text/css" href="./styles/style.css" media="screen" />
 </head>
 
