--- a/expressive-web/lessons/index-move.html
+++ b/expressive-web/lessons/index-move.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <img id="movingImage" src="images/179th street.jpg" alt="Moving Image">
+    <img id="movingImage" src="../images/179th street.jpg" alt="Moving Image">
 
 
     <script>
