--- a/expressive-web/unused-code/index-responsive.html
+++ b/expressive-web/unused-code/index-responsive.html
@@ -6,7 +6,7 @@
     <title>Travel</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-responsive.css">
 </head>
 <body>
     <a href="home.html" class="home-link">Home</a>
@@ -351,5 +351,5 @@
 <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
 <script src="https://unpkg.com/scrollama"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="script.js"></script>
+<script src="script-responsive.js"></script>
 </html>
