--- a/p5-template/index-ship.html
+++ b/p5-template/index-ship.html
@@ -13,6 +13,7 @@
         <!-- p5 will place a canvas in any 'main' element by default
     if you don't have a main element it will create one -->
     </main>
+    <footer>Project coded by Nastasia Pollas</footer>
 </body>
 
 
