--- a/hypertext-narrative/index.html
+++ b/hypertext-narrative/index.html
@@ -22,6 +22,7 @@
                     <li class="breadcrumb-item active"><a href="poem.html">Poem</a></li>
                 </ol>
             </nav>
+            <footer class="text-center">Project coded by Nastasia Pollas</footer>
         </div>
     </div>
 </body>
