--- a/chart.js/example.html
+++ b/chart.js/example.html
@@ -6,10 +6,11 @@
     <title>Bar Chart example</title>
 </head>
 <body>
+    <!--Create a canvas for responsiveness-->
     <div>
         <canvas id="myChart"></canvas>
     </div>
-    
+    <!--Run chart.js from a CDN-->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
         const ctx = document.getElementById('myChart');
