--- a/chart.js/basic-parsing.html
+++ b/chart.js/basic-parsing.html
@@ -37,7 +37,7 @@
                     yAxisKey: 'cogs'
                 },
                 backgroundColor: '#E4FF85',
-                borderColor: '#B7E9FB',
+                borderColor: '#273CF5',
                 borderWidth: 2
                 }, {
                 label: 'Gross margin',
