--- a/chart.js/doughnut.html
+++ b/chart.js/doughnut.html
@@ -20,9 +20,10 @@
             type: 'doughnut',
             data: {
                 datasets: [{
-                data: [{id: 'Sales', nested: {value: 1500}}, {id: 'Purchases', nested: {value: 500}}],
-                backgroundColor: ['gold', 'silver'],
-                borderColor: ['lightgreen', 'orangered']
+                data: [{id: 'Sales', nested: {value: 1500}}, {id: 'Purchases', nested: {value: 500}}, {id: 'Discounts', nested: {value: 820}}],
+                backgroundColor: ['gold', 'silver', 'lightblue'],
+                borderColor: ['lightgreen', 'orangered', 'violet'],
+                borderWidth: 2
                 }]
             },
             options: {
