--- a/chart.js/font.html
+++ b/chart.js/font.html
@@ -20,9 +20,14 @@
                 datasets: [{
                 data: {
                     January: 10,
-                    February: 17
+                    February: 17,
+                    March: 8,
+                    April: 19,
+                    May: 2,
+                    June: 7
                 },
-                borderColor: 'red'
+                borderColor: 'teal',
+                backgroundColor: 'magenta'
                 }]
             }
         });
@@ -38,7 +43,7 @@
                         labels: {
                             // This more specific font property overrides the global property
                             font: {
-                                size: 8 //this does not
+                                size: 5 //this does not
                             }
                         }
                     }
