--- a/chart.js/line-key.html
+++ b/chart.js/line-key.html
@@ -20,7 +20,7 @@
             type: 'line',
             data: {
                 datasets: [{
-                data: [{'data.key': 'One', 'data.value': 20}, {'data.key': 'Two', 'data.value': 30}],
+                data: [{'data.key': 'One', 'data.value': 20}, {'data.key': 'Two', 'data.value': 30}, {'data.key': 'Three', 'data.value': 9}],
                 borderColor: 'gold'
             }]
             },
