--- a/chart.js/basic-line.html
+++ b/chart.js/basic-line.html
@@ -19,8 +19,9 @@
             type: 'line',
             data: {
                 datasets: [{
-                    data: [{x: '2016-12-25', y: 20}, {x: '2016-12-26', y: 10}],
-                    borderColor: 'magenta'
+                    data: [{x: '2016-12-25', y: 20}, {x: '2016-12-26', y: 10}, {x: '2016-12-27', y: 13}, {x: '2016-12-28', y: 6}],
+                    borderColor: 'magenta',
+                    backgroundColor: 'forestgreen'
                 }]
             }
         });
