--- a/chart.js/line-scale.html
+++ b/chart.js/line-scale.html
@@ -22,7 +22,10 @@
                 datasets: [{
                 data: {
                     January: 10,
-                    February: 20
+                    February: 20,
+                    March: 8,
+                    April: 15,
+                    May: 28
                 },
                 borderColor: 'red'
                 }]
