colored points on the line

--- a/chart.js/axes.html
+++ b/chart.js/axes.html
@@ -25,7 +25,8 @@
                         // Creating 2 Y axes = use yAxisID to map datasets
                         // This binds the dataset to the left y axis
                         yAxisID: 'left-y-axis',
-                        borderColor: 'green'
+                        borderColor: 'green',
+                        backgroundColor: 'crimson' //colors points on the line
 
                     }, {
                         data: [0.1, 0.5, 1.0, 2.0, 1.5, 0],
@@ -33,7 +34,8 @@
 
                         // This binds the dataset to the right y axis
                         yAxisID: 'right-y-axis',
-                        borderColor: 'purple'
+                        borderColor: 'purple',
+                        backgroundColor: 'goldenrod' //colors points on the line
                     }], //labels axis
                     labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun']
                 },
